Issue #17998: Fix an internal error in regular expression engine.